fixalign
fixalign

--- a/trees.css
+++ b/trees.css
@@ -74,7 +74,6 @@ margin-right: 5px;
 	font-size: larger;
 }
 .active_map {
-	background-color: green !important;
+    background-color: #1111DD !important;
 }
-
 
